spade-tests/src/snapshots/spade_tests__typeinference__range_indexing_non_array_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: int<8>) -> [int<8>; 2] {
    x[0:3]
}


error: Index target must be an array, got int<8>
  ┌─ testinput:2:5
  │
1 │ fn test(x: int<8>) -> [int<8>; 2] {
  │            ------ Type int<8> inferred here
2 │     x[0:3]
  │     ^-----
  │     │
  │     Type [_; _] inferred here
  │     Expected array
  │
  = note: Expected: [_; _]
               Got: int<8>


